Img processor and visualiser 2